# MIA_Store

./: .eslintrc.json  .gitignore  PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml
docs/: API.md  CODING_STANDARDS.md  DEPLOYMENT.md
frontend/: .eslintrc.json  next.config.js  package.json  tailwind.config.ts  vitest.config.ts
frontend/tests/: setup.ts
service-1/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
service-1/app/: main.py
service-1/app/api/v1/: __init__.py  auth.py  cart.py  health.py  orders.py  payments.py  products.py  reviews.py  search.py  stores.py  users.py  wishlist.py
service-1/app/core/: config.py  database.py  dependencies.py  security.py
service-1/app/models/: __init__.py  base.py  cart.py  order.py  product.py  review.py  store.py  user.py  wishlist.py
service-1/app/schemas/: auth.py  cart.py  order.py  payment.py  product.py  review.py  store.py  user.py  wishlist.py
service-1/app/services/: order_service.py  product_service.py
service-1/app/services/payment/: base.py  vnpay.py
service-1/tests/: conftest.py
service-1/tests/test_api/: test_auth.py
service-1/tests/test_core/: test_security.py
service-1/tests/test_models/: test_user.py
service-1/tests/test_services/: test_order_service.py
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/hooks/: useCart.test.tsx  useCart.tsx  useFilter.test.ts  useFilter.ts  useLanguage.tsx  useToast.tsx
(+92 files in other folders)
